--- a/src/app/views/books/listing/listing.marko
+++ b/src/app/views/books/listing/listing.marko
@@ -16,9 +16,9 @@
                     <th>Title</th>
                 </thead>
                 <tbody>
-                    <tr>
-                    <td>1</td>
-                    <td>JavaSceipt</td>
+                    <tr for( book in data.books )>
+                        <td>${ book.id }</td>
+                        <td>${ book.title }</td>
                     </tr>
                 </tbody>
             </table>
