--- a/restfull-api-com-restify/app/views/index.ejs
+++ b/restfull-api-com-restify/app/views/index.ejs
@@ -152,8 +152,8 @@
                 </thead>
                 <tbody id="table-users">
 
-                                   
-                  
+
+
                 </tbody>
               </table>
             </div>
@@ -164,14 +164,14 @@
         <div class="col-md-4">
 
           <div class="row">
-          
+
             <!-- ./col -->
             <div class="col-xs-6">
               <!-- small box -->
               <div class="small-box bg-green">
                 <div class="inner">
                   <h3 id="number-users">0</h3>
-          
+
                   <p>Usuários</p>
                 </div>
                 <div class="icon">
@@ -185,7 +185,7 @@
               <div class="small-box bg-yellow">
                 <div class="inner">
                   <h3 id="number-users-admin">0</h3>
-          
+
                   <p>Administradores</p>
                 </div>
                 <div class="icon">
@@ -205,29 +205,29 @@
             <form role="form" id="form-user-create">
               <div class="box-body">
                 <div class="form-group">
-                  <label for="exampleInputName">Nome</label>
-                  <input type="text" required class="form-control" id="exampleInputName" placeholder="Digite o nome do usuário" name="name">
+                  <label for="exampleInputName-update">Nome</label>
+                  <input type="text" required class="form-control" id="exampleInputName-update" placeholder="Digite o nome do usuário" name="name">
                 </div>
                 <div class="form-group">
                   <label>Gênero</label>
                   <div class="radio">
-                    <label for="exampleInputGenderM">
-                      <input type="radio" id="exampleInputGenderM" name="gender" value="M" checked>
+                    <label for="exampleInputGenderM-update">
+                      <input type="radio" id="exampleInputGenderM-update" name="gender" value="M" checked>
                       Masculino</label>
                   </div>
                   <div class="radio">
-                    <label for="exampleInputGenderF">
-                      <input type="radio" id="exampleInputGenderF" name="gender" value="F">
+                    <label for="exampleInputGenderF-update">
+                      <input type="radio" id="exampleInputGenderF-update" name="gender" value="F">
                       Feminino</label>
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputBirth">Nascimento</label>
-                  <input type="date" class="form-control" id="exampleInputBirth" name="birth">
+                  <label for="exampleInputBirth-update">Nascimento</label>
+                  <input type="date" class="form-control" id="exampleInputBirth-update" name="birth">
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputCountry">País</label>
-                  <select class="form-control" id="exampleInputCountry" name="country">
+                  <label for="exampleInputCountry-update">País</label>
+                  <select class="form-control" id="exampleInputCountry-update" name="country">
                     <option value="" selected="selected">Selecione um país</option>
                     <option value="United States">United States</option>
                     <option value="United Kingdom">United Kingdom</option>
@@ -473,24 +473,24 @@
                   </select>
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputEmail1">E-mail</label>
-                  <input type="email" required class="form-control" id="exampleInputEmail" placeholder="Digite o e-mail" name="email">
+                  <label for="exampleInputEmail1-update">E-mail</label>
+                  <input type="email" required class="form-control" id="exampleInputEmail-update" placeholder="Digite o e-mail" name="email">
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputPassword1">Senha</label>
-                  <input type="password" required class="form-control" id="exampleInputPassword" placeholder="Crie uma senha" name="password">
+                  <label for="exampleInputPassword-update">Senha</label>
+                  <input type="password" required class="form-control" id="exampleInputPassword-update" placeholder="Crie uma senha" name="password">
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputFile">Foto</label>
-                  <input type="file" id="exampleInputFile" name="photo">
+                  <label for="exampleInputFile-update">Foto</label>
+                  <input type="file" id="exampleInputFile-update" name="photo">
                 </div>
                 <div class="checkbox">
                   <label>
-                    <input type="checkbox" name="admin" id="exampleInputAdmin"> Administrador
+                    <input type="checkbox" name="admin" id="exampleInputAdmin-update"> Administrador
                   </label>
                 </div>
               </div>
-              <!-- /.box-body -->          
+              <!-- /.box-body -->
               <div class="box-footer">
                 <button type="submit" class="btn btn-success">Salvar</button>
               </div>
